--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,10 @@
 
 <nav class="nav">
   <span class="nav__menu">
-    <a href="" routerLink="/">Home</a>
+    <a href="" routerLink="/" routerLinkActive="nav__item_selected">Home</a>
   </span>
   <span class="nav__menu">
-    <a href="" routerLink="/detail">Detail</a>
+    <a href="" routerLink="/detail" routerLinkActive="nav__item_selected">Detail</a>
   </span>
 </nav>
 
