--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -2,3 +2,4 @@
   detail works!
 </p>
 <button type="button" (click)="navigateToHome()">Vers Home</button>
+<a href="" [routerLink]="['/detail', 2]">Detail 2</a>
