Ajout routes child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,12 @@
   <span class="nav__menu">
     <a href="" [routerLink]="['/detail', idDetail]">Detail</a>
   </span>
+  <span class="nav__menu">
+    <a href="" [routerLink]="['/detail', 'formations']">Formations</a>
+  </span>
+  <span class="nav__menu">
+    <a href="" [routerLink]="['/detail', 'connaissances']">Connaissances</a>
+  </span>
 </nav>
 
 <router-outlet></router-outlet>
