--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,3 +3,5 @@
 </p>
 <button type="button" (click)="navigateToHome()">Vers Home</button>
 <a href="" [routerLink]="['/detail', 2]">Detail 2</a>
+
+<router-outlet></router-outlet>
