--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,13 +29,13 @@
     <a href="" [routerLink]="['/']">Home</a>
   </span>
   <span class="nav__menu">
-    <a href="" [routerLink]="['/detail', idDetail]">Detail</a>
+    <a href="" [routerLink]="['/detail', 'idDetail']">Detail</a>
   </span>
   <span class="nav__menu">
-    <a href="" [routerLink]="['/detail', 'formations']">Formations</a>
+    <a href="" [routerLink]="['/detail', 'idDetail', 'formations']">Formations</a>
   </span>
   <span class="nav__menu">
-    <a href="" [routerLink]="['/detail', 'connaissances']">Connaissances</a>
+    <a href="" [routerLink]="['/detail', 'idDetail', 'connaissances']">Connaissances</a>
   </span>
 </nav>
 
